--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
                   <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"></path>
                 </svg>
               </button>
+              <button type="button" class="btn btn-sm btn-secondary" id="newscopy" style="padding: .25rem .5rem;font-size: .875rem;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+                  <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
+                </svg>
+              </button>
                 <br>
               <span id="newslastBuildDate" style="font-size: 14px;"></span>
             </h4>
@@ -327,7 +332,17 @@
       });
 
       $('.todayDate').text("("+new Date(new Date().getTime() + ( 1000 * 60 * 60 * 9 )).toISOString().slice(0, 10) +" 기준)");
-      
+
+      $('#newscopy').click(function(){
+        var shareText = '';
+
+        $('#newsList').find('p').each(function(){
+          shareText += $(this).find('a').attr('href') + '\n' + $(this).text() + '\n\n'
+        });
+
+        prompt("텍스트를 복사하세요.",shareText);
+      });
+
        $('#newsreload').click();
     });
   </script>
