--- a/index.html
+++ b/index.html
@@ -319,12 +319,13 @@
             for(var i = 0 ; i < json.items.length ; i ++){
               var news = json.items[i];
               html += '<p><a title="'+news.title+'" href="'+news.link+'">' + news.title + '</a>';
+              html += '<br>';
+              html += news.description + '<br><span style="color: #8e6d6d;font-size: 14px;">발행시간 : ' + new Date(news.pubDate).toLocaleString() + '</span>';
               html += '<button type="button" class="btn btn-sm btn-secondary newsshare" data-idx="'+i+'" style="padding: .25rem .5rem;font-size: .875rem;">';
               html += '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">';
               html += '<path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>';
               html += '</svg></button>';              
-              html += '<br>';
-              html += news.description + '<br><span style="color: #8e6d6d;font-size: 14px;">발행시간 : ' + new Date(news.pubDate).toLocaleString() + '</span> </p>';
+              html += '</p>';
             }
             $("#newsList").html(html);
           }
@@ -333,10 +334,10 @@
 
       $('.todayDate').text("("+new Date(new Date().getTime() + ( 1000 * 60 * 60 * 9 )).toISOString().slice(0, 10) +" 기준)");
 
-      $('#newsshare').click(function(){
+      $('.newsshare').click(function(){console.log(this)
         var idx = $(this).data("idx");
         var shareText = '';
-        shareText += $('#newsList').find('p')[idx].find('a').attr('href') + '\n' + $('#newsList').find('p')[idx];        
+        shareText += $($('#newsList').find('p')[idx]).find('a').attr('href') + '\n' + $($('#newsList').find('p')[idx]).text();
 
         copyToClipboard(shareText);
       });
